Fix Java 9 version parsing